# nausicaa

./: .gitignore  LIBRARIES  LIBRARIES.org  Makefile  README  README.nausicaa  ROADMAP  ROADMAP.org  TODO  TODO.org  for-each-project.sh  print-projects-not-scheme.sh  print-projects-not-template.sh  print-projects.sh  propagate-common-configuration.sh  propagate-infrastructure.sh  propagate-readme-files.sh  rebuild-and-install-and-test-project.sh  rebuild-and-test-project.sh  relink-configuration.sh  relink-infrastructure.sh  relink-readme-files.sh  tag
cairo/: ANNOUNCE  README  aclocal.m4  configure.ac  make-inspector.sps  prepare.sh
cairo/configuration/: cairo-inspector.m4  nausicaa.make  project.make
cairo/doc/: nausicaa-cairo.texi
cairo/tests/: test-basic.sps  test-cairo.sps  test-core.sps  test-platform.sps
curl/: ANNOUNCE  Makefile.in  README  TODO.org  aclocal.m4  configure.ac  make-inspector.sps  prepare.sh
curl/configuration/: curl-inspector.m4  nausicaa.make  project.make
curl/doc/: nausicaa-curl.texi
curl/proofs/: proof-ssl.sps
curl/tests/: test-basics.sps  test-curl.sps  test-platform.sps  test-primitives.sps
expat/: ANNOUNCE  README  aclocal.m4  configure.ac  make-inspector.sps  prepare.sh
expat/configuration/: expat-inspector.m4  nausicaa.autoconf  project.make
expat/doc/: expat.texi  nausicaa-expat.texi
expat/libraries/: compile-all.ikarus.sps  compile-all.larceny.sps  expat.sls
expat/tests/: test-expat.sps  test-platform.sps
gcrypt/: ANNOUNCE  README  aclocal.m4  configure.ac  make-gcrypt-inspector.sps  make-gpg-error-inspector.sps  make-inspector.sps  prepare.sh
gcrypt/configuration/: gcrypt-inspector.m4  gpg-error-inspector.m4  project.make
gcrypt/doc/: nausicaa-gcrypt.texi
gcrypt/tests/: test-gcrypt.sps  test-platform.sps
glibc/: README  configure.ac
glibc/doc/: nausicaa-glibc.texi
glibc/libraries/: compile-all.ikarus.sps  compile-all.sps
glibc/tests/: test-libc.sps  test-streams.sps  test-time.sps
gpgme/: ANNOUNCE  README  configure.ac  make-inspector.sps  prepare.sh
gpgme/configuration/: nausicaa.make  project.make
gpgme/doc/: nausicaa-gpgme.texi
iconv/: ANNOUNCE  README  aclocal.m4  configure.ac  make-inspector.sps  prepare.sh
iconv/configuration/: iconv-inspector.m4  nausicaa.autoconf  project.make
iconv/doc/: nausicaa-iconv.texi
iconv/tests/: test-iconv.sps
libxml2/: ANNOUNCE  README  aclocal.m4  configure.ac  make-inspector.sps  prepare.sh
libxml2/configuration/: libxml2-inspector.m4  nausicaa.autoconf  project.make
libxml2/doc/: nausicaa-libxml2.texi
libxml2/tests/: test-libxml.sps  test-platform.sps
linux/: README  configure.ac
linux/doc/: nausicaa-linux.texi
mhd/: ANNOUNCE  README  aclocal.m4  configure.ac  make-inspector.sps  prepare.sh
mhd/configuration/: mhd-inspector.m4  nausicaa.make  project.make
mhd/doc/: nausicaa-mhd.texi
mhd/tests/: test-mhd.sps
mp/: ANNOUNCE  Makefile.in  README  README.rules  aclocal.m4  configure.ac  make-inspector.sps  prepare.sh
mp/configuration/: mp-inspector.m4  nausicaa.autoconf  nausicaa.make  project.make
mp/doc/: nausicaa-mp.texi
mp/libraries/: compile-all.larceny.sps  compile-all.sps
mp/tests/: test-mpc.sps  test-mpf.sps  test-mpfi.sps  test-mpfr.sps  test-mpfrcx.sps  test-mpq.sps  test-mpz.sps  test-random.sps
nettle/: ANNOUNCE  README  aclocal.m4  configure.ac  make-inspector.sps  prepare.sh
nettle/configuration/: nettle-inspector.m4  project.make
nettle/doc/: nausicaa-nettle.texi  nettle.texiinc
nettle/tests/: test-hogweed-platform.sps  test-nettle-platform.sps
ossp-sa/: README  configure.ac
ossp-sa/doc/: nausicaa-ossp-sa.texi
ossp-sa/libraries/: compile-all.ikarus.sps  compile-all.larceny.sps  ossp-sa.sls
ossp-sa/tests/: test-addr.sps  test-sa.sps
pango/: README  configure.ac  prepare.sh
pango/configuration/: nausicaa.make  project.make
pango/doc/: nausicaa-pango.texi  nausicaa-template.texi
pango/infrastructure/: develstuff.make
posix/: ANNOUNCE  Makefile.in  README  TODO.org  aclocal.m4  config.h.in  configure.ac  make-inspector.sh  make-inspector.sps  prepare.sh
posix/configuration/: library.make  nausicaa.autoconf  nausicaa.make  posix-inspector.m4  project.make
posix/doc/: nausicaa-posix.texi
posix/libraries/: compile-all.ikarus.sps  compile-all.larceny.sps  compile-all.sps  posix.sls
posix/tests/: test-cstrings.sps  test-environment.sps  test-fd-linux.sps  test-fd-posix.sps  test-fd.sps  test-file-glibc.sps  test-file-posix.sps  test-file.sps  test-job.sps  test-posix.sps  test-process.sps  test-signals.sps  test-sockets.sps  test-stat-posix.sps  test-streams.sps  test-system.sps  test-time-glibc.sps  test-time-posix.sps  test-time-structs.sps  test-time.sps  test-users.sps
postgresql/: ANNOUNCE  README  aclocal.m4  configure.ac  make-inspector.sps  prepare.sh
postgresql/configuration/: nausicaa.make  postgresql-inspector.m4  project.make
postgresql/doc/: nausicaa-postgresql.texi
postgresql/proofs/: proof-async.sps
postgresql/tests/: test-pg.sps  test-platform.sps  test-posix.sps
proofs/: README  configure.ac
proofs/libraries/: compile-all.sps  lib-for-syntax-case-literal-01.scm
scheme/: ANNOUNCE  BUGS.org  CREDITS  Makefile.custom.in  Makefile.in  README  README.nausicaa  README.rules  TODO.org  configure.ac  prepare.sh  try-larceny-compatibility.sh  try-ypsilon-compatibility.sh
scmobj/: Makefile.in  README  configure.ac  prepare.sh
scripts/: Makefile.custom.in  README  configure.ac
silex/: README  configure.ac  prepare.sh
sqlite/: ANNOUNCE  README  aclocal.m4  configure.ac  make-inspector.sps  prepare.sh
stubs/: Makefile.in  README  aclocal.m4  config.h.in  configure.ac  prepare.sh
template/: ANNOUNCE  README  configure.ac  make-inspector.sps  prepare.sh
uriel/: Makefile.in  README  begin0.sls  configure.ac  oop.sls
uriparser/: README  configure.ac
uuid/: ANNOUNCE  Makefile.in  README  aclocal.m4  configure.ac  make-inspector.sps  prepare.sh
zlib/: ANNOUNCE  Makefile.in  README  aclocal.m4  configure.ac  make-inspector.sps  prepare.sh
(+2465 files in other folders)
