dnl
dnl Part of: Nausicaa/Curl
dnl Contents: configuration curl
dnl Date: Mon Nov 16, 2009
dnl
dnl Abstract
dnl
dnl
dnl
dnl Copyright (c) 2009 Marco Maggi <marco.maggi-ipsu@poste.it>
dnl
dnl This  program  is free  software:  you  can redistribute  it
dnl and/or modify it  under the terms of the  GNU General Public
dnl License as published by the Free Software Foundation, either
dnl version  3 of  the License,  or (at  your option)  any later
dnl version.
dnl
dnl This  program is  distributed in  the hope  that it  will be
dnl useful, but  WITHOUT ANY WARRANTY; without  even the implied
dnl warranty  of  MERCHANTABILITY or  FITNESS  FOR A  PARTICULAR
dnl PURPOSE.   See  the  GNU  General Public  License  for  more
dnl details.
dnl
dnl You should  have received a  copy of the GNU  General Public
dnl License   along   with    this   program.    If   not,   see
dnl <http://www.gnu.org/licenses/>.
dnl

dnl page
dnl --------------------------------------------------------------------
dnl Setup.
dnl --------------------------------------------------------------------

AC_INIT([nausicaa-curl],[0.1d0],[marco.maggi-ipsu@poste.it])
DS_BEGIN([./src/libraries/foreign/net/curl.sls])
AC_CANONICAL_TARGET
NAUSICAA_BEGIN
DS_EXCLUDE_SECTION([CONFIG_INSPECTION_SCRIPT])
DS_EXCLUDE_SECTION([AUTOCONF])
DS_EXCLUDE_SECTION([PKGCONFIG])
NAUSICAA_SCHEME_CHECK_LIBRARY([NAU_FOREIGN],[(foreign ffi)])
NAUSICAA_C_LANGUAGE
AC_CHECK_HEADERS([curl/curl.h],,[AC_MSG_FAILURE([cannot find Curl headers],[2])])
AC_CHECK_LIB([curl],[curl_global_init],,[AC_MSG_FAILURE([cannot find Curl library],[2])])
NAUSICAA_SIZEOF

dnl page
dnl --------------------------------------------------------------------
dnl Helper functions.
dnl --------------------------------------------------------------------

m4_define([NAU_CURL_INCLUDES],[
#include <curl/curl.h>
])

AC_DEFUN([NAU_CURL_INSPECT_TYPE],
  [NAUSICAA_INSPECT_TYPE([$1],[$2],[$3],[#f],[NAU_CURL_INCLUDES])])

AC_DEFUN([NAU_CURL_INSPECT_STRUCT_TYPE],
  [NAUSICAA_INSPECT_STRUCT_TYPE([$1],[$2],[#f],[NAU_CURL_INCLUDES])])

AC_DEFUN([NAU_CURL_INSPECT_FIELD_TYPE],
  [NAUSICAA_INSPECT_FIELD_TYPE([$1],[$2],[$3],[$4],[#f],[NAU_CURL_INCLUDES])])

AC_DEFUN([NAU_CURL_ENUM_VALUE],
  [NAU_CURL_VALUEOF_TEST([$1],[$1])])

AC_DEFUN([NAU_CURL_DEFINE_VALUE],
  [NAU_CURL_VALUEOF_TEST([$1],[$1])])

AC_DEFUN([NAU_CURL_DEFINE_STRING],
  [NAUSICAA_STRING_TEST([$1],[$1],[#f],[NAU_CURL_INCLUDES])])

dnl --------------------------------------------------------------------

AC_DEFUN([NAU_CURL_SIZEOF_TEST],
  [NAUSICAA_SIZEOF_TEST([$1],[$2],[#f],[NAU_CURL_INCLUDES])])

AC_DEFUN([NAU_CURL_VALUEOF_TEST],
  [NAUSICAA_VALUEOF_TEST([$1],[$2],[#f],[NAU_CURL_INCLUDES])])

AC_DEFUN([NAU_CURL_OFFSETOF_FIELD_TEST],
  [NAUSICAA_OFFSETOF_FIELD_TEST([$1],[$2],[$3],[NAU_CURL_INCLUDES])])

AC_DEFUN([NAU_CURL_STRUCT_FIELD],
  [NAUSICAA_INSPECT_FIELD_TYPE([$1],[$2],[$3],[$4],,[NAU_CURL_INCLUDES])])

dnl page
dnl --------------------------------------------------------------------
dnl Data types inspection.
dnl --------------------------------------------------------------------

NAU_CURL_INSPECT_TYPE([CURL_SOCKET],[curl_socket_t],[signed-int])
NAU_CURL_INSPECT_TYPE([CURL_OFF],[curl_off_t],[signed-int])
NAU_CURL_INSPECT_TYPE([CURLSOCKTYPE],[curlsocktype],[signed-int])
NAU_CURL_INSPECT_TYPE([CURLIOERR],[curlioerr],[signed-int])
NAU_CURL_INSPECT_TYPE([CURLIOCMD],[curliocmd],[signed-int])
NAU_CURL_INSPECT_TYPE([CURL_INFOTYPE],[curl_infotype],[signed-int])
NAU_CURL_INSPECT_TYPE([CURLCODE],[CURLcode],[signed-int])
NAU_CURL_INSPECT_TYPE([CURL_PROXYTYPE],[curl_proxytype],[signed-int])



dnl page
dnl --------------------------------------------------------------------
dnl Data structures type inspection.
dnl --------------------------------------------------------------------

AC_DEFUN([NAU_CURL_HTTPPOST_FIELD],
  [NAU_CURL_INSPECT_FIELD_TYPE([CURL_HTTPPOST_$1],[struct curl_httppost],[$2],[$3])])

NAU_CURL_INSPECT_STRUCT_TYPE([CURL_HTTPPOST],[struct curl_httppost])
NAU_CURL_HTTPPOST_FIELD([NEXT],[next],[pointer])
NAU_CURL_HTTPPOST_FIELD([NAME],[name],[pointer])
NAU_CURL_HTTPPOST_FIELD([NAMELENGTH],[namelength],[signed-int])
NAU_CURL_HTTPPOST_FIELD([CONTENTS],[contents],[pointer])
NAU_CURL_HTTPPOST_FIELD([CONTENTSLENGTH],[contentslength],[signed-int])
NAU_CURL_HTTPPOST_FIELD([BUFFER],[buffer],[pointer])
NAU_CURL_HTTPPOST_FIELD([BUFFERLENGTH],[bufferlength],[signed-int])
NAU_CURL_HTTPPOST_FIELD([CONTENTTYPE],[contenttype],[pointer])
NAU_CURL_HTTPPOST_FIELD([CONTENTTYPE],[contenttype],[pointer])
NAU_CURL_HTTPPOST_FIELD([CONTENTHEADER],[contentheader],[pointer])
NAU_CURL_HTTPPOST_FIELD([MORE],[more],[pointer])
NAU_CURL_HTTPPOST_FIELD([FLAGS],[flags],[signed-int])
NAU_CURL_HTTPPOST_FIELD([SHOWFILENAME],[showfilename],[pointer])
NAU_CURL_HTTPPOST_FIELD([USERP],[userp],[pointer])

dnl --------------------------------------------------------------------

AC_DEFUN([NAU_CURL_SOCKADDR_FIELD],
  [NAU_CURL_INSPECT_FIELD_TYPE([CURL_SOCKADDR_$1],[struct curl_sockaddr],[$2],[$3])])

NAU_CURL_INSPECT_STRUCT_TYPE([CURL_SOCKADDR],[struct curl_sockaddr])
NAU_CURL_SOCKADDR_FIELD([FAMILY],[family],[signed-int])
NAU_CURL_SOCKADDR_FIELD([SOCKTYPE],[socktype],[signed-int])
NAU_CURL_SOCKADDR_FIELD([PROTOCOL],[protocol],[signed-int])
NAU_CURL_SOCKADDR_FIELD([ADDRLEN],[addrlen],[signed-int])
dnl *NOTE* For  the time being, we  do not inspect  the "struct sockaddr
dnl addr" field.

dnl --------------------------------------------------------------------

AC_DEFUN([NAU_CURL_KHKEY_FIELD],
  [NAU_CURL_INSPECT_FIELD_TYPE([CURL_KHKEY_$1],[struct curl_khkey],[$2],[$3])])

NAU_CURL_INSPECT_STRUCT_TYPE([CURL_KHKEY],[struct curl_khkey])
NAU_CURL_KHKEY_FIELD([KEY],[key],[pointer])
NAU_CURL_KHKEY_FIELD([LEN],[len],[unsigned-int])
NAU_CURL_KHKEY_FIELD([KEYTYPE],[keytype],[signed-int])


dnl page
dnl --------------------------------------------------------------------
dnl Constants.
dnl --------------------------------------------------------------------

dnl miscellaneous constants
NAU_CURL_DEFINE_VALUE([CURL_SOCKET_BAD])
NAU_CURL_DEFINE_VALUE([CURL_MAX_WRITE_SIZE])
NAU_CURL_DEFINE_VALUE([CURL_MAX_HTTP_HEADER])
NAU_CURL_DEFINE_VALUE([CURL_WRITEFUNC_PAUSE])

dnl version informations
NAU_CURL_DEFINE_STRING([LIBCURL_COPYRIGHT])
NAU_CURL_DEFINE_STRING([LIBCURL_TIMESTAMP])

NAU_CURL_DEFINE_VALUE([LIBCURL_VERSION_MAJOR])
NAU_CURL_DEFINE_VALUE([LIBCURL_VERSION_MINOR])
NAU_CURL_DEFINE_VALUE([LIBCURL_VERSION_PATCH])
NAU_CURL_DEFINE_VALUE([LIBCURL_VERSION_NUM])

dnl flag values for the "flags" field of structure "curl_httppost"
NAU_CURL_DEFINE_VALUE([HTTPPOST_FILENAME])
NAU_CURL_DEFINE_VALUE([HTTPPOST_READFILE])
NAU_CURL_DEFINE_VALUE([HTTPPOST_PTRNAME])
NAU_CURL_DEFINE_VALUE([HTTPPOST_PTRCONTENTS])
NAU_CURL_DEFINE_VALUE([HTTPPOST_BUFFER])
NAU_CURL_DEFINE_VALUE([HTTPPOST_PTRBUFFER])
NAU_CURL_DEFINE_VALUE([HTTPPOST_CALLBACK])

dnl return codes for the seek callbacks
NAU_CURL_DEFINE_VALUE([CURL_SEEKFUNC_OK])
NAU_CURL_DEFINE_VALUE([CURL_SEEKFUNC_FAIL])
NAU_CURL_DEFINE_VALUE([CURL_SEEKFUNC_CANTSEEK])

dnl return codes for the read callbacks
NAU_CURL_DEFINE_VALUE([CURL_READFUNC_ABORT])
NAU_CURL_DEFINE_VALUE([CURL_READFUNC_PAUSE])

dnl enum curlsocktype
NAU_CURL_DEFINE_VALUE([CURLSOCKTYPE_IPCXN])
NAU_CURL_DEFINE_VALUE([CURLSOCKTYPE_LAST])

dnl enum curlioerr
NAU_CURL_DEFINE_VALUE([CURLIOE_OK])
NAU_CURL_DEFINE_VALUE([CURLIOE_UNKNOWNCMD])
NAU_CURL_DEFINE_VALUE([CURLIOE_FAILRESTART])
NAU_CURL_DEFINE_VALUE([CURLIOE_LAST])

dnl enum curliocmd
NAU_CURL_DEFINE_VALUE([CURLIOCMD_NOP])
NAU_CURL_DEFINE_VALUE([CURLIOCMD_RESTARTREAD])
NAU_CURL_DEFINE_VALUE([CURLIOCMD_LAST])

dnl enum curl_infotype
NAU_CURL_DEFINE_VALUE([CURLINFO_TEXT])
NAU_CURL_DEFINE_VALUE([CURLINFO_HEADER_IN])
NAU_CURL_DEFINE_VALUE([CURLINFO_HEADER_OUT])
NAU_CURL_DEFINE_VALUE([CURLINFO_DATA_IN])
NAU_CURL_DEFINE_VALUE([CURLINFO_DATA_OUT])
NAU_CURL_DEFINE_VALUE([CURLINFO_SSL_DATA_IN])
NAU_CURL_DEFINE_VALUE([CURLINFO_SSL_DATA_OUT])
NAU_CURL_DEFINE_VALUE([CURLINFO_END])

dnl enum CURLcode
NAU_CURL_DEFINE_VALUE([CURLE_OK])
NAU_CURL_DEFINE_VALUE([CURLE_UNSUPPORTED_PROTOCOL])
NAU_CURL_DEFINE_VALUE([CURLE_FAILED_INIT])
NAU_CURL_DEFINE_VALUE([CURLE_URL_MALFORMAT])
NAU_CURL_DEFINE_VALUE([CURLE_OBSOLETE4])
NAU_CURL_DEFINE_VALUE([CURLE_COULDNT_RESOLVE_PROXY])
NAU_CURL_DEFINE_VALUE([CURLE_COULDNT_RESOLVE_HOST])
NAU_CURL_DEFINE_VALUE([CURLE_COULDNT_CONNECT])
NAU_CURL_DEFINE_VALUE([CURLE_FTP_WEIRD_SERVER_REPLY])
NAU_CURL_DEFINE_VALUE([CURLE_REMOTE_ACCESS_DENIED])
NAU_CURL_DEFINE_VALUE([CURLE_OBSOLETE10])
NAU_CURL_DEFINE_VALUE([CURLE_FTP_WEIRD_PASS_REPLY])
NAU_CURL_DEFINE_VALUE([CURLE_OBSOLETE12])
NAU_CURL_DEFINE_VALUE([CURLE_FTP_WEIRD_PASV_REPLY])
NAU_CURL_DEFINE_VALUE([CURLE_FTP_WEIRD_227_FORMAT])
NAU_CURL_DEFINE_VALUE([CURLE_FTP_CANT_GET_HOST])
NAU_CURL_DEFINE_VALUE([CURLE_OBSOLETE16])
NAU_CURL_DEFINE_VALUE([CURLE_FTP_COULDNT_SET_TYPE])
NAU_CURL_DEFINE_VALUE([CURLE_PARTIAL_FILE])
NAU_CURL_DEFINE_VALUE([CURLE_FTP_COULDNT_RETR_FILE])
NAU_CURL_DEFINE_VALUE([CURLE_OBSOLETE20])
NAU_CURL_DEFINE_VALUE([CURLE_QUOTE_ERROR])
NAU_CURL_DEFINE_VALUE([CURLE_HTTP_RETURNED_ERROR])
NAU_CURL_DEFINE_VALUE([CURLE_WRITE_ERROR])
NAU_CURL_DEFINE_VALUE([CURLE_OBSOLETE24])
NAU_CURL_DEFINE_VALUE([CURLE_UPLOAD_FAILED])
NAU_CURL_DEFINE_VALUE([CURLE_READ_ERROR])
NAU_CURL_DEFINE_VALUE([CURLE_OUT_OF_MEMORY])
NAU_CURL_DEFINE_VALUE([CURLE_OPERATION_TIMEDOUT])
NAU_CURL_DEFINE_VALUE([CURLE_OBSOLETE29])
NAU_CURL_DEFINE_VALUE([CURLE_FTP_PORT_FAILED])
NAU_CURL_DEFINE_VALUE([CURLE_FTP_COULDNT_USE_REST])
NAU_CURL_DEFINE_VALUE([CURLE_OBSOLETE32])
NAU_CURL_DEFINE_VALUE([CURLE_RANGE_ERROR])
NAU_CURL_DEFINE_VALUE([CURLE_HTTP_POST_ERROR])
NAU_CURL_DEFINE_VALUE([CURLE_SSL_CONNECT_ERROR])
NAU_CURL_DEFINE_VALUE([CURLE_BAD_DOWNLOAD_RESUME])
NAU_CURL_DEFINE_VALUE([CURLE_FILE_COULDNT_READ_FILE])
NAU_CURL_DEFINE_VALUE([CURLE_LDAP_CANNOT_BIND])
NAU_CURL_DEFINE_VALUE([CURLE_LDAP_SEARCH_FAILED])
NAU_CURL_DEFINE_VALUE([CURLE_OBSOLETE40])
NAU_CURL_DEFINE_VALUE([CURLE_FUNCTION_NOT_FOUND])
NAU_CURL_DEFINE_VALUE([CURLE_ABORTED_BY_CALLBACK])
NAU_CURL_DEFINE_VALUE([CURLE_BAD_FUNCTION_ARGUMENT])
NAU_CURL_DEFINE_VALUE([CURLE_OBSOLETE44])
NAU_CURL_DEFINE_VALUE([CURLE_INTERFACE_FAILED])
NAU_CURL_DEFINE_VALUE([CURLE_OBSOLETE46])
NAU_CURL_DEFINE_VALUE([CURLE_TOO_MANY_REDIRECTS])
NAU_CURL_DEFINE_VALUE([CURLE_UNKNOWN_TELNET_OPTION])
NAU_CURL_DEFINE_VALUE([CURLE_TELNET_OPTION_SYNTAX])
NAU_CURL_DEFINE_VALUE([CURLE_OBSOLETE50])
NAU_CURL_DEFINE_VALUE([CURLE_PEER_FAILED_VERIFICATION])
NAU_CURL_DEFINE_VALUE([CURLE_GOT_NOTHING])
NAU_CURL_DEFINE_VALUE([CURLE_SSL_ENGINE_NOTFOUND])
NAU_CURL_DEFINE_VALUE([CURLE_SSL_ENGINE_SETFAILED])
NAU_CURL_DEFINE_VALUE([CURLE_SEND_ERROR])
NAU_CURL_DEFINE_VALUE([CURLE_RECV_ERROR])
NAU_CURL_DEFINE_VALUE([CURLE_OBSOLETE57])
NAU_CURL_DEFINE_VALUE([CURLE_SSL_CERTPROBLEM])
NAU_CURL_DEFINE_VALUE([CURLE_SSL_CIPHER])
NAU_CURL_DEFINE_VALUE([CURLE_SSL_CACERT])
NAU_CURL_DEFINE_VALUE([CURLE_BAD_CONTENT_ENCODING])
NAU_CURL_DEFINE_VALUE([CURLE_LDAP_INVALID_URL])
NAU_CURL_DEFINE_VALUE([CURLE_FILESIZE_EXCEEDED])
NAU_CURL_DEFINE_VALUE([CURLE_USE_SSL_FAILED])
NAU_CURL_DEFINE_VALUE([CURLE_SEND_FAIL_REWIND])
NAU_CURL_DEFINE_VALUE([CURLE_SSL_ENGINE_INITFAILED])
NAU_CURL_DEFINE_VALUE([CURLE_LOGIN_DENIED])
NAU_CURL_DEFINE_VALUE([CURLE_TFTP_NOTFOUND])
NAU_CURL_DEFINE_VALUE([CURLE_TFTP_PERM])
NAU_CURL_DEFINE_VALUE([CURLE_REMOTE_DISK_FULL])
NAU_CURL_DEFINE_VALUE([CURLE_TFTP_ILLEGAL])
NAU_CURL_DEFINE_VALUE([CURLE_TFTP_UNKNOWNID])
NAU_CURL_DEFINE_VALUE([CURLE_REMOTE_FILE_EXISTS])
NAU_CURL_DEFINE_VALUE([CURLE_TFTP_NOSUCHUSER])
NAU_CURL_DEFINE_VALUE([CURLE_CONV_FAILED])
NAU_CURL_DEFINE_VALUE([CURLE_CONV_REQD])
NAU_CURL_DEFINE_VALUE([CURLE_SSL_CACERT_BADFILE])
NAU_CURL_DEFINE_VALUE([CURLE_REMOTE_FILE_NOT_FOUND])
NAU_CURL_DEFINE_VALUE([CURLE_SSH])
NAU_CURL_DEFINE_VALUE([CURLE_SSL_SHUTDOWN_FAILED])
NAU_CURL_DEFINE_VALUE([CURLE_AGAIN])
NAU_CURL_DEFINE_VALUE([CURLE_SSL_CRL_BADFILE])
NAU_CURL_DEFINE_VALUE([CURLE_SSL_ISSUER_ERROR])
NAU_CURL_DEFINE_VALUE([CURL_LAST])

dnl enum curl_proxytype
NAU_CURL_DEFINE_VALUE([CURLPROXY_HTTP])
NAU_CURL_DEFINE_VALUE([CURLPROXY_HTTP_1_0])
NAU_CURL_DEFINE_VALUE([CURLPROXY_SOCKS4])
NAU_CURL_DEFINE_VALUE([CURLPROXY_SOCKS5])
NAU_CURL_DEFINE_VALUE([CURLPROXY_SOCKS4A])
NAU_CURL_DEFINE_VALUE([CURLPROXY_SOCKS5_HOSTNAME])

dnl auth constants
NAU_CURL_DEFINE_VALUE([CURLAUTH_NONE])
NAU_CURL_DEFINE_VALUE([CURLAUTH_BASIC])
NAU_CURL_DEFINE_VALUE([CURLAUTH_DIGEST])
NAU_CURL_DEFINE_VALUE([CURLAUTH_GSSNEGOTIATE])
NAU_CURL_DEFINE_VALUE([CURLAUTH_NTLM])
NAU_CURL_DEFINE_VALUE([CURLAUTH_DIGEST_IE])
NAU_CURL_DEFINE_VALUE([CURLAUTH_ANY])
NAU_CURL_DEFINE_VALUE([CURLAUTH_ANYSAFE])
NAU_CURL_DEFINE_VALUE([CURLSSH_AUTH_ANY])
NAU_CURL_DEFINE_VALUE([CURLSSH_AUTH_NONE])
NAU_CURL_DEFINE_VALUE([CURLSSH_AUTH_PUBLICKEY])
NAU_CURL_DEFINE_VALUE([CURLSSH_AUTH_PASSWORD])
NAU_CURL_DEFINE_VALUE([CURLSSH_AUTH_HOST])
NAU_CURL_DEFINE_VALUE([CURLSSH_AUTH_KEYBOARD])
NAU_CURL_DEFINE_VALUE([CURLSSH_AUTH_DEFAULT])
NAU_CURL_DEFINE_VALUE([CURL_ERROR_SIZE])

dnl enum keytype
NAU_CURL_DEFINE_VALUE([CURLKHTYPE_UNKNOWN])
NAU_CURL_DEFINE_VALUE([CURLKHTYPE_RSA1])
NAU_CURL_DEFINE_VALUE([CURLKHTYPE_RSA])
NAU_CURL_DEFINE_VALUE([CURLKHTYPE_DSS])


dnl page
dnl --------------------------------------------------------------------
dnl Done.
dnl --------------------------------------------------------------------

AC_CONFIG_FILES([../src/libraries/foreign/net/curl/sizeof.sls:src/libraries/foreign/net/curl/sizeof.sls.in])
DS_CONFIG_FILE_SLACKWARE_BIN_DESC
DS_CONFIG_FILE_SLACKWARE_DOC_DESC
NAUSICAA_END
DS_END

### end of file
